--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "babel-runtime": "^6.6.1",
     "fbjs": "^0.8.1",
-    "react-static-container": "^1.0.1"
+    "react-static-container": "^1.0.1",
+    "prop-types": "^15.6.1"
   },
   "peerDependencies": {
     "babel-relay-plugin": "0.10.0",
