--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "peerDependencies": {
     "babel-relay-plugin": "0.10.0",
-    "react": "^16.0.0"
+    "react": "^15.0.0 || ^0.14.0"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
